change the possibly misleading facts amount for a records amount

--- a/pivot-drilldown-and-plot/README.adoc
+++ b/pivot-drilldown-and-plot/README.adoc
@@ -21,7 +21,7 @@ The prototype pulls together 4 datasets:
 The datasets are fetched from statistics.gov.scot and Wikidata, using SPARQL;
 then matched; and finally, the per-citizen and per-household values are calculated.
 
-The result is 50,000 data _facts_.
+The result is 17,490 data records.
 
 === The build
 
