--- a/README.adoc
+++ b/README.adoc
@@ -14,3 +14,4 @@ Short investigations, experiments, etc.
 1. link:wikibase-trial/[Trialling Wikibase for our data layer]
 1. link:waste-quants-thru-time-on-a-map/[Waste quantities through time, on a map]
 1. link:longannet-found-in-the-data/[How I chanced upon Longannet in the data]
+1. link:cluster-of-materials-incoming/[Waste sites and the quantities of incoming materials]
